// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingCarousel renders correctly 1`] = `
<section
  className=""
>
  <div
    className=""
  />
</section>
`;

exports[`SlidingCarousel renders correctly with infinite set 1`] = `
<section
  className=""
>
  <div
    className=""
  >
    <div
      aria-hidden="true"
    >
      What sort of 'eater' are you?
    </div>
    <div>
      What sort of 'eater' are you?
    </div>
    <div
      aria-hidden="true"
    >
      What sort of 'eater' are you?
    </div>
  </div>
</section>
`;
